--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,7 +1,15 @@
 {
   "name": "@repo/db",
   "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:deploy": "prisma migrate deploy"
+  },
   "devDependencies": {
+    "@types/node": "^25.3.0",
+    "@types/pg": "^8.16.0",
     "prisma": "^7.4.1"
   },
   "dependencies": {
@@ -9,5 +17,8 @@
     "@prisma/client": "^7.4.1",
     "dotenv": "^17.3.1",
     "pg": "^8.18.0"
+  },
+  "exports": {
+    ".": "./src/client.ts"
   }
 }
