implement API structure with entreprise and livreur routes, controllers, and services

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,9 +15,13 @@
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
     "@repo/types": "workspace:*",
+    "@repo/db": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.10",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
